# gyres

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  cembrohbateub86nug3aokbtojick6li.darc  gigv7rbolrmfjtaumpm5q9pogootrhsk  manifest  op9qaqk2elsuscttshqqhtg6d2naeucf  q4smpflfqcqqbq9afbdlnds2se1hoikh  qb02jjdvbeognqo4lmsocgfouvo7lrkd.darc
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/plans/: 2026-04-20-gyres-mvp.md  gyres-core-spec-discussion-2.md  gyres-core-spec-discussion.md  gyres-core-spec-review-2.md  gyres-core-spec-review.md  issue-decomposition.md  issue-dependency-graph.md  trait-signatures.md
.claude/prompts/: session-1-phase-0.md  session-artifact-deep-dive.md
.github/workflows/: ci.yml
crates/gyres/: Cargo.toml
crates/gyres-core/: Cargo.toml  SPEC.md
crates/gyres-core/src/: agent.rs  artifact.rs  backend.rs  config.rs  context.rs  error.rs  gyre.rs  lib.rs  memory.rs  permissions.rs  state.rs  task.rs  telemetry.rs  types.rs
crates/gyres-llm/: Cargo.toml
crates/gyres-llm/src/: lib.rs
crates/gyres-mcp/: Cargo.toml
crates/gyres-mcp/src/: lib.rs
crates/gyres-polar/: Cargo.toml
crates/gyres-polar/src/: lib.rs
crates/gyres-runtime/: Cargo.toml
crates/gyres-runtime/src/: lib.rs
crates/gyres-tracing/: Cargo.toml
crates/gyres-tracing/src/: lib.rs
crates/gyres/src/: lib.rs
docs/src/adrs/: 0001-record-architecture-decisions.md
docs/src/adrs/architecture/: 0002-agent-trait-uses-shared-references.md  0003-gyre-is-stateless-with-strategy-type.md  0004-no-hooks-no-middleware.md  0005-thin-gyre-context-plus-telemetry.md  0014-harness-and-os-are-concerns-not-products.md  0016-crate-namespace-strategy.md  0018-artifact-trait-hierarchy.md  0019-cqrs-shared-storage.md  0020-stores-wrap-dyn-backend.md
docs/src/adrs/concepts/: 0008-step-result-replaces-should-stop.md  0009-feedback-is-side-channel.md  0021-all-pm-levels-are-task.md  0022-hybrid-document-versioning.md
docs/src/adrs/crates/gyres-core/: 0010-permission-context-as-enum.md  0011-span-based-telemetry-api.md  0012-turn-trait-with-serialized-turn.md
docs/src/adrs/cross-cutting/: 0006-error-handling-via-boxing.md  0007-sync-feedback.md  0013-telemetry-vs-tracing-crate.md  0015-commit-to-tokio.md  0017-versioning-strategy.md
docs/src/concepts/: agent-loop-data-flow.md  artifact-taxonomy.md  context-surface-area.md  implicit-side-effects.md  memory-architecture.md  multi-agent-patterns.md  store-abstraction.md  task-hierarchy.md
docs/src/research/: agent-infrastructure-landscape.md
docs/src/vision/: agent-os-vs-harness.md  roadmap-tiers.md
