[workspace]
resolver = "2"
members = [
    "crates/gyres",
    "crates/gyres-core",
    "crates/gyres-runtime",
    "crates/gyres-polar",
    "crates/gyres-llm",
    "crates/gyres-tracing",
    "crates/gyres-mcp",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aRustyDev/gyres"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
gyres-core = { path = "crates/gyres-core", version = "0.0.1" }
gyres-runtime = { path = "crates/gyres-runtime", version = "0.0.1" }
gyres-polar = { path = "crates/gyres-polar", version = "0.0.1" }
gyres-llm = { path = "crates/gyres-llm", version = "0.0.1" }
gyres-tracing = { path = "crates/gyres-tracing", version = "0.0.1" }
gyres-mcp = { path = "crates/gyres-mcp", version = "0.0.1" }

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "fs", "process", "signal", "io-util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"

# Tracing
tracing = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async traits
async-trait = "0.1"

# Utilities
dirs = "6"
