[package]
name = "gyres-llm"
description = "LLM-specific agent loop, tool registry, and context management for Gyres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gyres-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
async-trait.workspace = true
