[package]
name = "gyres-tracing"
description = "Telemetry layer for Gyres — Langfuse, OTEL, and custom backends"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gyres-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
